src/components/input-field/input-field.scss
@import '../../style/internal/mdc-variables';
@import '../../style/internal/shared_input-select-picker';

@import '@limetech/mdc-textfield/mdc-text-field';
@import '@limetech/mdc-ripple/mdc-ripple';
@import '@limetech/mdc-list/mdc-list';
@import '@limetech/mdc-elevation/mdc-elevation';
@import '@limetech/mdc-menu-surface/mdc-menu-surface';

/**
 * @prop --background-color: Background color of the field.
 * @prop --textarea-height: Height of the field when type is set to `textarea`
 */

:host {
    display: block;
}

:host([hidden]) {
    display: none;
}

.mdc-text-field {
    width: 100%;
    @include mdc-states-hover-opacity(0);
    @include mdc-states-focus-opacity(0, true);

    .mdc-floating-label {
        top: $floating-label-top-value;
    }
}

label,
div {
    &.mdc-text-field {
        transition: background-color 0.2s ease;

        &:not(.mdc-text-field--disabled) {
            // this has to be written this way to be able to override MD styles
            background-color: $background-color-normal;

            &:hover {
                background-color: $background-color-hovered;
            }
        }

        &.mdc-text-field--focused {
            background-color: $background-color-focused;
        }

        &.mdc-text-field--disabled {
            background-color: $background-color-disabled;
        }
    }
}

.mdc-text-field__formatted_input {
    display: None;
}

:not(.mdc-text-field--focused):not(.mdc-text-field--invalid) {
    .mdc-text-field__formatted_input {
        @include looks-like-input-label;

        display: block;

        position: absolute;
        left: pxToRem(16);
        top: pxToRem(21);
        z-index: 1;
    }

    .mdc-text-field__input[type='number'] {
        color: transparent;
        -webkit-text-fill-color: transparent;
    }
}

.mdc-text-field--disabled {
    .mdc-text-field__formatted_input {
        @include looks-disabled;
    }
}

.autocomplete-list-container {
    position: relative;
}

.autocomplete-list {
    background-color: white;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    max-height: pxToRem(200);
    overflow-y: auto;
}

.mdc-list-item {
    cursor: pointer;
}

.mdc-text-field__icon {
    width: pxToRem(24);
    height: pxToRem(24);
}

.mdc-text-field.mdc-text-field--textarea {
    textarea {
        height: var(--textarea-height);
    }
}

